# atoms-mcp

./: .atoms_test_cache.json  .clocignore  .coverage  .dockerignore  .emv  .env  .env.bak  .env.e2e  .env.example  .env.integration  .env.production  .env.render  .env.vercel.preview  .env.vercel.production  .env.vertex  .git-hooks-readme.txt  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintignore  .secrets.env.example  .vercelignore  .vultureignore  .yamllint.yaml  100_PERCENT_PASS_RATE_ACHIEVED.md  3_TIER_DEPLOYMENT.md  ADD_ATOMS_MCP_TO_DATABASE.sql  AGENTS.md  AGENTS_GUIDELINES_WALKTHROUGH.md  AGENT_QUICK_REFERENCE.md  AGGRESSIVE_CHANGE_POLICY.md  AGGRESSIVE_REFACTORING_COMPLETE.md  AGGRESSIVE_REFACTORING_PHASE_3_SUMMARY.md  AGGRESSIVE_REFACTORING_PLAN.md  AGGRESSIVE_REFACTORING_SESSION_COMPLETE.md  ALL_DOCUMENTATION_FILES.txt  ANALYTICS_REPORTING_TEST_SUITE_SUMMARY.md  APPLICATION_LAYER_IMPLEMENTATION.md  APPLICATION_LAYER_VALIDATION.md  ARCHITECTURE.md  (+358 more)
lib/vector-kit/: README.md  pyproject.toml
lib/vector-kit/vector_kit/: __init__.py  client.py
pheno_vendor/adapter_kit/: README.md  __init__.py  pyproject.toml  setup.py
pheno_vendor/adapter_kit/di/: __init__.py  container.py
pheno_vendor/adapter_kit/domain/: __init__.py  address.py  aggregate_root.py  domain_event.py  domain_service.py  ecommerce_domain.py  email.py  entity.py  event_handler.py  event_publisher.py  identity.py  money.py  repository.py  specification.py  unit_of_work.py  value_object.py
pheno_vendor/adapter_kit/factories/: __init__.py  base.py
pheno_vendor/adapter_kit/repositories/: __init__.py  base.py
pheno_vendor/cli_builder/: README.md  __init__.py  cli.py  pyproject.toml
pheno_vendor/cli_builder/backends/: argparse_backend.py  click_backend.py  registry.py  typer_backend.py
pheno_vendor/cli_builder/core/: builder.py  command.py  decorators.py
pheno_vendor/db_kit/: README.md  __init__.py  client.py  pyproject.toml  supabase_client.py
pheno_vendor/db_kit/adapters/: __init__.py  base.py  neon.py  postgres.py  supabase.py
pheno_vendor/db_kit/core/: engine.py
pheno_vendor/db_kit/migrations/: __init__.py  engine.py  migration.py
pheno_vendor/db_kit/pooling/: __init__.py  connection_pool.py  pool_manager.py
pheno_vendor/db_kit/query/: __init__.py
pheno_vendor/db_kit/realtime/: __init__.py  base.py  supabase.py
pheno_vendor/db_kit/storage/: __init__.py  base.py  supabase.py
pheno_vendor/db_kit/vector/: __init__.py
pheno_vendor/deploy_kit/: README.md  __init__.py  checks.py  cli.py  config.py  hooks.py  install_hooks.py  pyproject.toml  startup.py  utils.py  vendor.py
pheno_vendor/deploy_kit/cloud/: __init__.py  errors.py  interfaces.py  registry.py  types.py
pheno_vendor/deploy_kit/docker/: __init__.py
pheno_vendor/deploy_kit/local/: __init__.py  manager.py
pheno_vendor/deploy_kit/nvms/: __init__.py  parser.py
pheno_vendor/event_kit/: README.md  __init__.py  bus.py  pyproject.toml  setup.py
pheno_vendor/event_kit/core/: __init__.py  event_bus.py  event_store.py
pheno_vendor/event_kit/webhooks/: __init__.py  retry.py  signature.py  webhook_manager.py
pheno_vendor/filewatch_kit/: README.md  __init__.py  pyproject.toml  setup.py  watcher.py
pheno_vendor/kinfra/: API_RESOURCES.md  AUTH_INTEGRATION.md  COMPLETE_CAPABILITIES.md  CONSOLIDATION.md  DASHBOARD.md  FALLBACK_PAGES.md  README.md  RESOURCE_MANAGEMENT.md  RESOURCE_TYPES.md  __init__.py  exceptions.py  fallback_server.py  kinfra.py  middleware_helpers.py  orchestrator.py  port_registry.py  proxy_server.py  pyproject.toml  resource_manager.py  resource_manager_old.py.bak  service_manager.py  setup.py  smart_allocator.py  smart_infra_manager.py  tunnel_sync.py
pheno_vendor/kinfra/adapters/: __init__.py  api.py  base.py  command.py  daemon.py  docker.py  factory.py
pheno_vendor/kinfra/services/: __init__.py  byteport.py
pheno_vendor/kinfra/templates/: __init__.py  resources.py
pheno_vendor/kinfra/utils/: __init__.py  dns.py  env.py  health.py  process.py
pheno_vendor/mcp_qa/: README.md  __init__.py  pyproject.toml  setup.py
pheno_vendor/mcp_qa/adapters/: README.md  __init__.py  fast_http_client.py  widget_adapters.py
pheno_vendor/mcp_qa/assertions/: __init__.py  performance.py  prompts.py  resources.py  tools.py
pheno_vendor/mcp_qa/auth/: __init__.py  credential_manager.py  enhanced_keychain_manager.py  keychain_manager.py  mfa_handler.py  playwright_state_manager.py  pytest_fixtures.py  token_broker.py
pheno_vendor/mcp_qa/collaboration/: collaboration.py
pheno_vendor/mcp_qa/core/: __init__.py  adapters.py  cache.py  client_pool.py  connection_manager.py  data_generators.py  decorators.py  enhanced_adapter.py  factories.py  health_checks.py  health_registry.py  live_runner.py  optimizations.py  parallel_clients.py  patterns.py  progress_display.py  reporters.py  reporters_old.py  server_logs.py  streaming.py  test_registry.py  test_runner.py  test_runner_old.py  validators.py
pheno_vendor/mcp_qa/execution/: __init__.py  http_adapter.py  optimizations.py  optimizations_example.py  parallel_clients.py  pytest_plugin.py  timeout_wrapper.py
pheno_vendor/mcp_qa/fixtures/: __init__.py  auth.py  clients.py  database.py  servers.py  tools.py  workers.py
pheno_vendor/mcp_qa/framework/: __init__.py  cache.py  decorators.py  discovery.py
pheno_vendor/mcp_qa/health/: __init__.py  health_checks.py
pheno_vendor/mcp_qa/integration/: __init__.py  multi_server.py  workflows.py
pheno_vendor/mcp_qa/logging/: __init__.py  config.py  formatter.py  logger.py  mcp_formatter.py
pheno_vendor/mcp_qa/mocking/: __init__.py  builders.py  prompts.py  resources.py  server.py  tools.py
pheno_vendor/mcp_qa/monitoring/: connection_manager.py  file_watcher.py  (+1 more)
pheno_vendor/observability_kit/: DASHBOARD_EXTRACTION_SUMMARY.md  DASHBOARD_MIGRATION.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  verify_extraction.py
pheno_vendor/pydevkit/: README.md  __init__.py  correlation_id.py  pyproject.toml
pheno_vendor/workflow_kit/: README.md  __init__.py  pyproject.toml  setup.py  task.py
(+8905 files in other folders)
