[project]
name = "atoms-mcp"
version = "0.1.0"
description = "Atoms MCP Server - FastMCP server for Atoms platform"
readme = "README.md"
requires-python = "==3.12.*"

[tool.hatch.build]
targets.wheel.packages = ["."]
dependencies = [
    # Core MCP
    "fastmcp>=2.12.2",
    
    # Database
    "supabase>=2.5.0",
    "supabase-pydantic>=0.13.0",
    
    # Configuration
    "python-dotenv>=1.0.1",
    
    # HTTP
    "aiohttp>=3.8.0",
    "httpx>=0.28.1,<1.0.0",
    
    # Auth
    "workos>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    
    # AI/ML - Lightweight Vertex AI via REST API
    "google-auth>=2.0.0",
    
    # Redis & Caching (Upstash for serverless)
    "upstash-redis>=0.15.0",
    "upstash-ratelimit>=0.3.0",
    "py-key-value-aio>=0.2.8",
    
    # Utilities
    "pydantic[email]>=2.11.7,<3.0.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.12.2",
    "rapidfuzz>=3.10.0",

    # Lambda adapter
    "mangum>=0.17.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[project.scripts]
atoms = "atoms_mcp:main"

[tool.uv.sources]
# SST Python SDK from GitHub
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
# Both files are now fixed - no exclusions needed

[tool.ruff.lint.per-file-ignores]
# Test files often have unused variables for side effects or future use
"tests/**/*.py" = ["F841"]
"test_*.py" = ["F841"]
"*_test.py" = ["F841"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["archive", ".git", ".venv", "__pycache__", "*.egg"]
markers = [
    "asyncio: asyncio tests",
    "coverage_cli: CLI adapter coverage tests",
    "coverage_mcp: MCP adapter coverage tests",
    "coverage_workflow: Workflow tool coverage tests",
    "coverage_e2e: End-to-end MCP client tests",
    "error_handling: Error handling tests",
    "performance: Performance tests",
    "mock_only: Tests using mocks (no live services)",
    "live_services: Tests requiring live Supabase/AuthKit",
    "integration: Integration tests",
    "http: HTTP tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-p",
    "asyncio",
]


