[project]
name = "atoms-mcp"
version = "2.0.0"
description = "Atoms MCP Server with Hexagonal Architecture - Model Context Protocol server for Atoms workspace management"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

# CORE DEPENDENCIES (11 required)
# Reduced from 30+ to 11 essential dependencies
dependencies = [
    # MCP Server Framework
    "fastmcp>=2.13.0.1",

    # Data Validation & Settings
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.3.0",

    # CLI & Terminal Output
    "typer>=0.9.0",
    "rich>=13.0.0",

    # LLM & Embeddings (REQUIRED for project)
    "google-cloud-aiplatform>=1.49.0",

    # Database Client
    "supabase>=2.5.0",

    # HTTP Client
    "httpx>=0.28.1,<1.0.0",

    # Environment & Security
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[[project.authors]]
name = "Atoms Team"

# OPTIONAL DEPENDENCY GROUPS
# Install with: pip install atoms-mcp[cache] or atoms-mcp[pheno]
[project.optional-dependencies]

# Redis caching support (optional)
cache = [
    "redis>=5.0.0",
    "hiredis>=3.0.0",
]

# Pheno infrastructure integration (optional)
pheno = [
    "pheno-sdk @ git+file:///Users/kooshapari/temp-PRODVERCEL/485/kush/pheno-sdk",
]

# Infrastructure tooling (optional)
infra = [
    "supervisor>=4.2.0",
    "sentry-sdk>=1.0.0",
]

# SST infrastructure as code (placeholder - no Python SDK yet)
sst = []

# Development dependencies
dev = [
    # Testing Framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-dependency>=0.5.1",
    "pytest-benchmark>=4.0.0",
    "pytest-watch>=4.2.0",
    
    # Code Quality
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "zuban>=0.1.0",
    
    # Code Analysis
    "coverage>=7.4.0",
    "bandit[toml]>=1.7.6",
    "safety>=3.0.0",
    "vulture>=2.10.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
    
    # Type Stubs
    "types-requests>=2.31.0.0",
    "types-python-dateutil>=2.9.0.20240316",
    "types-PyYAML>=6.0.0",
    
    # Performance & Profiling
    "locust>=2.21.0",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.8.0",
    
    # Dependency Analysis
    "pipdeptree>=2.13.0",
    "pip-audit>=2.6.0",
    "pydeps>=1.12.0",
    
    # Visualization
    "graphviz>=0.20.1",
    
    # Documentation
    "interrogate>=1.5.0",
    
    # Build & Release
    "build>=1.0.3",
    "twine>=4.0.2",
]

# BUILD SYSTEM
[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atoms_mcp"]

# CODE FORMATTING
[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | pheno_vendor
  | schemas/generated
  | archive
  | build
  | dist
)/
'''

# IMPORT SORTING
[tool.isort]
profile = "black"
line_length = 120
skip = ["pheno_vendor", "schemas/generated", "archive", ".venv"]
known_first_party = ["atoms_mcp"]

# LINTING
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "schemas/generated",
    "archive",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "DTZ", "T10", "EM", "ISC",
    "ICN", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH",
    "ARG", "PTH", "PL", "TRY", "RUF",
]
ignore = [
    "E501", "PLR0913", "PLR2004", "TRY003", "EM101", "EM102",
    "PLR0912", "PLR0915", "PLR0911",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004"]
"scripts/*.py" = ["T201"]
"**/__init__.py" = ["F401"]
"schemas/generated/**/*.py" = ["ALL"]
"archive/**/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["atoms_mcp"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# TYPE CHECKING (zuban replaces mypy)
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "schemas/generated",
    "archive",
    "tests/load",
]

# TESTING
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

# TEST COVERAGE
[tool.coverage.run]
source = ["src/atoms_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "schemas/generated/*",
    "archive/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
precision = 2
show_missing = true

# SECURITY SCANNING
[tool.bandit]
exclude_dirs = ["tests", "pheno_vendor", "lib-sdks", "archive", ".venv"]
skips = ["B101"]

# DEAD CODE DETECTION
[tool.vulture]
paths = ["src/atoms_mcp"]
exclude = ["pheno_vendor", "lib-sdks", "archive", ".venv", "tests"]
min_confidence = 80
ignore_names = ["main", "cli", "settings"]

# DOCSTRING COVERAGE
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["pheno_vendor", "schemas/generated", "archive", ".venv", "tests"]
verbose = 1
quiet = false
whitelist-regex = []
color = true

# PYDANTIC SETTINGS
[tool.pydantic-settings]
config_file = "config.yaml"
config_file_encoding = "utf-8"
env_prefix = "ATOMS_"
env_file_encoding = "utf-8"
env_nested_delimiter = "__"
case_sensitive = false
env_ignore_empty = true
env_parse_none_str = "None"
