[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-kit"
version = "0.1.0"
description = "Unified embeddings and vector search SDK with multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KooshaPari", email = "kooshapari@gmail.com"}
]
keywords = ["vector-search", "embeddings", "semantic-search", "rag", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "httpx>=0.25",
]

[project.optional-dependencies]
# Provider dependencies
vertex = [
    "google-cloud-aiplatform>=1.38",
]
openai = [
    "openai>=1.3",
]
local = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]

# Backend dependencies
pgvector = [
    "asyncpg>=0.29",
    "pgvector>=0.2",
]
lancedb = [
    "lancedb>=0.3",
]
supabase = [
    "supabase>=2.0",
]
faiss = [
    "faiss-cpu>=1.7",
]

# Observability
telemetry = [
    "pydevkit[observability]",
]

# Full installation
full = [
    "vector-kit[vertex,openai,pgvector,supabase,telemetry]",
]

# Development
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/kooshapari/vector-kit"
Documentation = "https://vector-kit.readthedocs.io"
Repository = "https://github.com/kooshapari/vector-kit"
Issues = "https://github.com/kooshapari/vector-kit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vector_kit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
