[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-builder-kit"
version = "0.1.0"
description = "Unified CLI framework SDK abstracting argparse, Click, and Typer - write once, deploy anywhere"
authors = [
    {name = "Koosha Pari", email = "koosha@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cli", "command-line", "argparse", "click", "typer", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
all = [
    "click>=8.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kooshapari/cli-builder-kit"
Repository = "https://github.com/kooshapari/cli-builder-kit"
Documentation = "https://cli-builder-kit.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_builder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
