[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-kit"
version = "0.1.0"
description = "Event bus and webhook management for Python applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pheno SDK Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
kafka = ["aiokafka>=0.8.0"]
rabbitmq = ["aio-pika>=9.0.0"]
all = [
    "redis>=5.0.0",
    "aiokafka>=0.8.0",
    "aio-pika>=9.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pheno-sdk/event-kit"
Documentation = "https://event-kit.readthedocs.io"
Repository = "https://github.com/pheno-sdk/event-kit"

[tool.hatch.build.targets.wheel]
packages = ["event_kit"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
