[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinfra"
version = "1.0.0"
description = "Cross-platform infrastructure library for dynamic port allocation and secure tunneling"
readme = {text = "KInfra - Cross-platform infrastructure library for dynamic port allocation and secure tunneling.\n\nFeatures:\n- Smart port allocation with conflict resolution\n- Automatic cloudflared tunnel management\n- Service lifecycle management\n- Multi-language SDK support\n- Zero-config operation\n", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "KInfra Team", email = "admin@kinfra.dev"}
]
keywords = [
  "infrastructure",
  "port-allocation",
  "tunneling",
  "cloudflared",
  "networking",
  "devops",
  "microservices",
  "development",
  "automation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Networking",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Typing :: Typed"
]
dependencies = [
  "aiohttp>=3.8.0",
  "psutil>=5.9.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "flake8>=6.0.0"
]
all = [
  "aiohttp>=3.8.0",
  "psutil>=5.9.0",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/kooshapari/kinfra"
Documentation = "https://kinfra.dev/docs"
"Bug Tracker" = "https://github.com/kooshapari/kinfra/issues"
Source = "https://github.com/kooshapari/kinfra"

[project.scripts]
kinfra = "kinfra.cli:main"

[tool.setuptools.packages.find]
include = ["kinfra*"]

[tool.setuptools]
py-modules = ["kinfra_networking", "tunnel_manager"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]
"kinfra" = ["*.md", "*.txt", "*.yml", "*.yaml"]
