[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-qa"
version = "1.0.0"
description = "Comprehensive testing framework for Model Context Protocol servers"
authors = [
    {name = "Koosha Pari", email = "koosha@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "testing", "qa", "model-context-protocol", "test-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kooshapari/mcp-qa"
Repository = "https://github.com/kooshapari/mcp-qa"
Documentation = "https://mcp-qa.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_qa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
